Removed max-width property to avoid skewing the hero banner image on mobile view

--- a/css/style.css
+++ b/css/style.css
@@ -225,7 +225,6 @@ footer ul a{
 }
 .image-responsive{
   min-width:320px;
-  max-width:320px;
   margin:auto;
   min-height:240px;
   height:100%;
